@@ -1,5 +1,7 @@
 2010-01-15  Torbjorn Granlund  <tege@gmplib.org>
 
+	* gmp-h.in (__GMP_EXTERN_INLINE): Remove "extern" for newer Sun C.
+
 	* gmp-impl.h (GMP_LIMB_BYTES): New define.
 
 	* mpn/x86_64/darwin.m4 (LEA): New define.
